fix landing page on mobile

--- a/resources/web/style/chrome/layout.pcss
+++ b/resources/web/style/chrome/layout.pcss
@@ -310,6 +310,9 @@
         #preamble {
           margin-top: -48px;
           overflow: show;
+          @media (max-width: 766px) {
+            margin-top: 0;
+          }
         }
 
         #doc-article {
